--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -5,11 +5,11 @@
 <div class="container">
     <div class="row">
         <div class="col-md-8 offset-md-2 text-center">
-            <h1>Welcome to My Personal Website</h1>
-            <img src="images/my_image.jpg" alt="My Photo" class="img-fluid rounded-circle mb-4" style="max-width: 200px;">
+            <img src="./images/my_image.jpg" alt="My Photo" class="img-fluid rounded-circle mb-4" style="max-width: 200px;">
             <p>
-                Since [Year] I've been working to [Your mission or passion]. From [Your Location] I am working as a
-                [Your job Title] in [Your Company].
+                I'm Rushi and I'm a full stack developer with a heavy emphasis on backend development. Since 2017, I've been working as a software engineer.
+                I have lived in many countries,worked across folks across the globe and always up for friendly conversations about technology, weather, meaning of life or anything except Trump.
+                I have a passion for learning and sharing my knowledge with others as publicly as possible. If you're interested in learning more about me, feel free to explore the rest of my website.
             </p>
             <p>
                 Have a question? I'm always happy to answer! <a href="mailto:your.email@example.com">Contact me</a>
