--- a/Client/Shared/MainLayout.razor
+++ b/Client/Shared/MainLayout.razor
@@ -5,6 +5,14 @@
         <li><a href="/">Home</a></li>
         <li><a href="/about">About</a></li>
         <li><a href="/projects">Projects</a></li>
+        <li class="dropdown">
+            <a href="#">Blogs</a>
+            <ul class="dropdown-content">
+                <li><a href="/blogs/travel">Travel</a></li>
+                <li><a href="/blogs/technology">Technology</a></li>
+                <li><a href="/blogs/philosophy">Philosophy</a></li>
+            </ul>
+        </li>
         <li><a href="/contact">Contact</a></li>
     </ul>
 </header>
