added markdown way, fixed reload errors

--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -20,9 +20,8 @@
             <div class="col-12">
                 <h2>Who am I?</h2>
                 <p>
-                    Originally from Pune, India, I have been working in the software industry since 2017.
-                    Since 2017, I've been working as a software engineer.
-                    I have lived in many countries, worked across folks across the globe and I'm always up for friendly conversations about technology, weather, the meaning of life, or anything except Trump.
+                    Originally from Pune, India, I have been working as a software industry since 2017.
+                    Having lived in multiple countries, worked with folks across the globe, I'm always up for friendly conversations about technology, weather, the meaning of life, or anything except Trump.
                     I have a passion for learning and sharing my knowledge, experience, and shower thoughts with others. If you're interested in learning more about me, feel free to explore the rest of my website.
                 </p>
             </div>
@@ -42,15 +41,15 @@
     <!-- Projects Section -->
     <div class="row mt-5">
         <div class="col-md-12">
-            <h2>Projects</h2>
+            <h2>Some of my blogs</h2>
             <div class="row">
                 <div class="col-md-6">
-                    <h3><a href="#">Project 1</a></h3>
-                    <p>A brief description of project 1.</p>
+                    <h3><a href="#">Alamanac/Panchang</a></h3>
+                    <p>Want to be able to write and calculate your own almanac(or panchang)?</p>
                 </div>
                 <div class="col-md-6">
-                    <h3><a href="#">Project 2</a></h3>
-                    <p>A brief description of project 2.</p>
+                    <h3><a href="#">Trip to Chennai</a></h3>
+                    <p>Travelogue on a Chennai trip in 2024.</p>
                 </div>
                 <div class="col-md-6">
                     <h3><a href="#">Project 3</a></h3>
