--- a/Client/Shared/MainLayout.razor
+++ b/Client/Shared/MainLayout.razor
@@ -11,6 +11,7 @@
                 <li><a href="/blogs/travel">Travel</a></li>
                 <li><a href="/blogs/technology">Technology</a></li>
                 <li><a href="/blogs/philosophy">Philosophy</a></li>
+                <li><a href="/blogs/random">Random</a></li>
             </ul>
         </li>
         <li><a href="/contact">Contact</a></li>
