--- a/Client/Pages/blogs/Random/RandomIndex.razor
+++ b/Client/Pages/blogs/Random/RandomIndex.razor
@@ -4,5 +4,6 @@
 <p>Welcome to my random blogs page.:</p>
 
 <ul>
-    <li><a href="/blogs/random/panchang">Panchang</a></li>
+    <li><a href="/blogs/random/panchang">Panchang/Almanac part 1</a></li>
+    <li><a href="/blogs/random/panchang2">Panchang/Almanac part 2</a></li>
 </ul>
