--- a/Client/Shared/MainLayout.razor
+++ b/Client/Shared/MainLayout.razor
@@ -1,4 +1,5 @@
 ﻿@inherits LayoutComponentBase
+@inject NavigationManager NavigationManager
 
 <header class="navbar">
     <ul class="nav-links">
@@ -18,12 +19,25 @@
     </ul>
 </header>
 
+@{
+    // Remove the query string and trailing slash if needed.
+    var uri = new Uri(NavigationManager.Uri);
+    var isHome = uri.AbsolutePath == "/";
+}
 
-<div class="content">
-    @Body
-</div>
+@if (isHome)
+{
+    <div style="margin-top: 100px;">
+        @Body
+    </div>
+}
+else
+{
+    <div class="blog-container">
+        @Body
+    </div>
+}
 
-<footer>
-    <p>Rushikesh Sane</p>
-    <p>Copyright &copy; 2025</p>
+<footer class="footer">
+    <p>&copy; @DateTime.Now.Year Your Name. All rights reserved.</p>
 </footer>
